--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   http: ^0.12.2
   shared_preferences: ^0.5.12
   provider: ^4.3.2+2
+  fluttertoast: ^7.1.1
+  badges: ^0.0.6
 dev_dependencies:
   flutter_test:
     sdk: flutter
