--- a/server/package.json
+++ b/server/package.json
@@ -11,15 +11,18 @@
   },
   "devDependencies": {},
   "dependencies": {
-    "strapi": "3.1.0-alpha.5",
-    "strapi-admin": "3.1.0-alpha.5",
-    "strapi-utils": "3.1.0-alpha.5",
-    "strapi-plugin-content-type-builder": "3.1.0-alpha.5",
-    "strapi-plugin-content-manager": "3.1.0-alpha.5",
-    "strapi-plugin-users-permissions": "3.1.0-alpha.5",
-    "strapi-plugin-email": "3.1.0-alpha.5",
-    "strapi-plugin-upload": "3.1.0-alpha.5",
-    "strapi-connector-mongoose": "3.1.0-alpha.5"
+    "axios": "^0.20.0",
+    "i": "^0.3.6",
+    "strapi": "^3.2.3",
+    "strapi-admin": "^3.2.3",
+    "strapi-connector-mongoose": "^3.2.3",
+    "strapi-plugin-content-manager": "^3.2.3",
+    "strapi-plugin-content-type-builder": "^3.2.3",
+    "strapi-plugin-documentation": "^3.1.0-alpha.5",
+    "strapi-plugin-email": "^3.2.3",
+    "strapi-plugin-upload": "^3.2.3",
+    "strapi-plugin-users-permissions": "^3.2.3",
+    "strapi-utils": "^3.2.3"
   },
   "author": {
     "name": "A Strapi developer"
